[package]
name = "installation"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "installer utilities"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/installation"

[dependencies]
anyhow = "1.0.97"
dirs = "6.0.0"
which = "8.0.0"
